Check types in GBoxed assignments

Check if the Python value is GBoxed instead of assuming it is.
Without this, the following segfaults:

from gi.repository import Soup

msg = Soup.Message()
msg.props.uri = 'http://www.gnome.org'

as we assume the new property is a GBoxed while it is actually a
string.

https://bugzilla.gnome.org/show_bug.cgi?id=676603

Co-authored-by: Martin Pitt <martinpitt@gnome.org>
Signed-off-by: Martin Pitt <martinpitt@gnome.org>